2002-07-12  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitTryStatement): Fix case with empty try
	statement - bug 3071.
	(EmitStatement): Fix case with empty if clause - bug 3076.
	(EmitBinaryExpression): Fix case with mixed-type addition and
	subtraction with constant 0 on left - bug 3078.
	(EmitSwitchStatement, DefineLabel): Fix case with infinite loop
	caused by if() continue; - bug 3077.
	* src/symbol.cpp (GetReadAccessMethod): Fix case with X.super.m()
	in an accessor method - bug 169.

2002-07-11  Chris Abbey  <jikes@cabbey.net>

	* configure.in: redefine version number to differentiate
	cvs builds post 1.16.
	* jikes.spec: ditto
	* configure: regen

2002-07-10  Chris Abbey  <jikes@cabbey.net>

	* 1.16 release.

2002-07-10  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessPLUS): Fix the (hopefully) last bug with
	string concatenation - bug 3066.

2002-07-10  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h (AddException): Add optimizations.
	* src/bytecode.h (handler_range_start, handler_range_end): New
	fields to allow better handling of exception handler ranges.
	(monitor_handler_pc, monitor_start_pc): Remove, as their
	functionality was duplicated by new fields.
	* src/bytecode.cpp (EmitTryStatement, ProcessAbruptExit),
	(EmitSynchronizedStatement): Use newer form of exception handling,
	to solve bug 3055.
	* src/ast.h (AstBlock::TRY_CLAUSE_WITH_CATCH): New block tag.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>

	* src/definite.cpp (DefiniteAssignmentExpression),
	(DefinitePLUSPLUSOrMINUSMINUS): Detect shadow variables better.
	* src/expr.cpp (CreateAccessToScopedVariable): Avoid assertion
	when illegally accessing non-final local - bug 3057.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (TypeAccessCheck): Perform type checks in all
	cases, including supertypes - bug 3054.
	* src/decl.cpp (ProcessTypeHeader, ProcessInterface): Remove
	duplicate error report.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>
